updated the fonts of the headers and paragraphs

--- a/services.html
+++ b/services.html
@@ -8,7 +8,8 @@
     <title>AC Temp. site</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <link href='https://fonts.googleapis.com/css?family=GFS Didot' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="style/style.css" type="text/css" />
 </head>
 
@@ -45,7 +46,7 @@
                     </a>
                     <li class="fa fa-google "><a href="#h "></a></li>
                 </ul>
-                 <!-- Looking at code lab for the dropdown menu item -->
+                <!-- Looking at code lab for the dropdown menu item -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-left">
                         <li><a href="index.html">Welcome</a></li>
