updated the columns from col-sm to col-xs

--- a/bathrooms.html
+++ b/bathrooms.html
@@ -30,7 +30,7 @@
                 </a>
             </div>
             <div class="navbar-collapse collapse " id="navbar">
-                <ul class="social-icons-nav hidden-xs hidden-sm">
+                <ul class="social-icons-nav hidden-xs hidden-sm hidden-md">
                     <a href="https://www.linkedin.com/in/angelatconnolly">
                         <li class="fa fa-linkedin"></li>
                     </a>
