--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </a>
             </div>
             <div class="navbar-collapse collapse " id="navbar">
-                <ul class="social-icons-nav hidden-xs hidden-sm">
+                <ul class="social-icons-nav hidden-xs hidden-sm hidden-md">
                     <a href="https://www.linkedin.com/in/angelatconnolly">
                         <li class="fa fa-linkedin"></li>
                     </a>
@@ -104,9 +104,10 @@
         <div class="container">
             <div class="row">
                 <h1 class="home-page-h1">Conbu Interior Design........</h1>
-                <p class="home-page-p">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl
-                    ut aliquip ex ea commodo consequat. Duis autem vel eum iriure.
+                <p class="home-page-p">Welcome to <strong>Conbu Interior Design</strong> where we don’t just have the eye for interior design, we have the head for it. We marry creativity and style with razor-sharp project management skills to deliver your luxury home or business
+                    design from concept to completion. Angela has been President of Ireland’s <strong>Interiors Association</strong> since 2014 and is a Judge Co-ordinator at Ireland’s <strong>Fit Out Awards</strong>.
                 </p>
+                <p class="index-page-caption"><i>Defined by luxury, designed for living</i></p>
             </div>
         </div>
         <div class="container">
