--- a/mystory.html
+++ b/mystory.html
@@ -30,7 +30,7 @@
                 </a>
             </div>
             <div class="navbar-collapse collapse " id="navbar">
-                <ul class="social-icons-nav hidden-xs hidden-sm">
+                <ul class="social-icons-nav hidden-xs hidden-sm hidden-md">
                     <a href="https://www.linkedin.com/in/angelatconnolly">
                         <li class="fa fa-linkedin"></li>
                     </a>
@@ -63,7 +63,7 @@
         <!-- Main Content -->
         <div class="container mystory">
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-xs-12">
                     <div class="mystory-image">
                         <img src="images/head.jpg" class="imgage-in-mystory-page" alt="Image">
                     </div>
@@ -72,12 +72,29 @@
                     <source src="Bottles_Empty.mp3" type="audio/mpeg"> Your browser does not support the audio element.
                     </audio>
                 </div>
-                <div class="col-sm-8">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                     <div class="mystory-text">
-                        <h1 class="portfolio-h1">Company Background</h1>
+                        <h1 class="portfolio-h1">My Story</h1>
                         <hr class="block-divider-portfolio">
-                        <div class="mystory-p">Lorem ipsum dolor sit amet, "I haven't been sober for months" nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
-                            aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis.
+                        <div class="mystory-p">It’s not enough to have ‘an eye’ for interior design. You’ve got to have the head for it. While I’m modest in respect to most aspects of my life, professionally I’m proud to hold my Interior Design head up high. I own and run the
+                            successful Dublin-based Interior Design company <strong>Conbu Interior Design</strong> and am honoured to be the President of the <strong>Interiors Association</strong> since 2014. I also take great pleasure to be a Judge at
+                            Ireland’s annual <strong>Fit Out Awards</strong>.
+                            <p>My passion for luxury home interiors and custom furniture design is paired with razor-sharp organisation, personable customer relations, excellent service and a pocket book full of Ireland’s premier suppliers, contractors and
+                                craftspeople.
+                            </p>
+                            <p>Like many others in my industry, I came to interior design a little later in life. In fact, I could use my career as a practical case study in redesign.</p>
+                            <p>In 2007 I bid farewell to my Senior Role in Corporate Relationship Management and repositioned myself as a student at the Dublin Institute of Design. This might sound like a career downgrade from mansion to bedsit to some,
+                                but for me it was exhilarating. Each design concept burst open doors onto another and I experienced a true sense of artistic discovery.</p>
+                            <p>Things got even better when I realised that the project management skills I’d acquired working in the corporate business world were directly applicable in interior design. Indeed, I had an edge. Encouraged by family and friends
+                                I set up <strong>Conbu Interior Design</strong> and have been delivering bespoke luxury design projects for residential and commercial customers ever since.</p>
+                            <p>Enjoying what you do for a living is a real privilege and I’m not about to let it go. I have three value principles that guide my design career and for sure spill over into my personal life too.</p>
+                            <p>The first is <strong>Excellence</strong>. It’s cliche to call yourself a perfectionist but here I am breaking the rules. I guarantee the highest levels of quality and professionalism in all aspects of service delivery from
+                                concept creation and product sourcing to fit-outs and project delivery. And yes this means I’m able to meet deadlines head on!</p>
+                            <p>Then there’s <strong>Empathy</strong>. This is critical for an Interior Designer, who is, after all, invited into someone’s home to help them live in it. Our homes are an extension of who we are as people. This is front and
+                                centre in my mind when designing for my clients and I endeavour to see the world in their shoes. That’s not just a metaphor by the way! I recently threw on my highest heels when marking where to hang paintings to perfectly
+                                meet the eye-line of the tall art-loving couple I was working with!</p>
+                            <p>Finally, <strong>Education</strong>. I strongly believe in lifelong learning - and I’m fortunate to have the energy for it! I love mastering new skills and exploring new styles and inspiration. My unquenchable educational obsession
+                                at present is Georgian architecture. I am a member of the Georgian Society of Ireland. And YES a Georgian refurbishment project would most definitely be a dream project for me.</p>
                             </p>
                         </div>
                     </div>
@@ -88,23 +105,53 @@
         <div class="container testimonials">
             <h2>Testimonials</h2>
             <br>
-            <div class="well"><i class="fa fa-quote-left fa-2x fa-pull-left fa-border"></i>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
-                nostrud exerci tation ullamcorper suscipit lobort
+            <div class="well"><i class="fa fa-quote-left fa-2x fa-pull-left fa-border"></i>
+                <p>I contacted Angela at Conbu Interior Design with an almost impossible brief. The apartment I was selling was going on the market in 3 weeks and in the meantime I was undergoing surgery. This meant that I needed to hand over the entire
+                    staging of the property to Angela and at the same time, give her a super tight deadline. My budget was as tight as the deadline!</p>
+                <p>Angela took on the project straight away. Her calm professional nature calmed and reassured me from the outset. Angela transformed my apartment and came in under budget and bang on time. The sale went through almost immediately and came
+                    in 25% higher than the expected market value.</p>
+                <p>The initial investment of staging of the apartment paid fro itself many times over. Working with Angela was a joy. I would unreservedly recommend this company.” <strong>2017 A Harpur, Dublin 1</strong></p>
             </div>
-            <div class="well"><i class="fa fa-quote-left fa-2x fa-pull-left fa-border"></i>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
-                nostrud exerci tation ullamcorper suscipit lobort
+            <div class="well"><i class="fa fa-quote-left fa-2x fa-pull-left fa-border"></i>We contacted Angela and explained our needs were 2 fold – to dress the windows in good quality stylish drapes and blinds, and to ensure the blinds were easy to manage by a person
+                with limited mobility. We got both which was provided with sensitivity and expertise. Nothing was forced but the end product met our needs way beyond what we expected.“ <strong>2017 G & J Fraher, Dundrum, Dublin</strong>
             </div>
-            <div class="well"><i class="fa fa-quote-left fa-2x fa-pull-left fa-border"></i>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
-                nostrud exerci tation ullamcorper suscipit lobort
+            <div class="well"><i class="fa fa-quote-left fa-2x fa-pull-left fa-border"></i>Angela was very professional to work with. Angela talked to my husband and myself and took our surroundings and suggestions into consideration when planning room colours, blinds
+                and furniture which she sourced. The end result is a home that is welcoming, comfortable and practical. We love our new home.” <strong>2015 M & J Ryan, Tipperary</strong>
             </div>
-            <div class="well"><i class="fa fa-quote-left fa-2x fa-pull-left fa-border"></i>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
-                nostrud exerci tation ullamcorper suscipit lobort
+            <div class="well"><i class="fa fa-quote-left fa-2x fa-pull-left fa-border"></i>
+                <p>We wanted Angela to help us refurbish our home. In particular we wanted help with overall design, functionality, colour schemes, interiors and the overall flow from room to room. Angela was very patient and diligent in listening to our
+                    varied requirements. She helped us to focus on our priorities and presented a detailed plan.</p>
+                <p>Angela is really easy to deal with. She is unassuming, very professional and courteous and possesses a wonderful ability to understand our requirements and transcribe them to a simple plan. She really did take all the stress out of the
+                    project, did not overwhelm us with multiple options but presented us with clear choices and made it very easy for us to make good and fast decisions.” <strong>2016 C Stapleton, Foxrock, D18</strong></p>
             </div>
-            <div class="well"><i class="fa fa-quote-left fa-2x fa-pull-left fa-border"></i>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
-                nostrud exerci tation ullamcorper suscipit lobort
+            <div class="well"><i class="fa fa-quote-left fa-2x fa-pull-left fa-border"></i>
+                <p>I enlisted the services of Conbu Interior Design in July 2015. The brief was to transform my dated and jaded lounge into a relaxing, comfortable and modern space. I am delighted with the results that Angela achieved. While she listened
+                    to my ideas, I was quite happy to leave the detail of the design to her and she delivered a timeless comfortable space that exceeded my expectations.</p>
+                <p>Angela was a pleasure to work with, is very relaxed and approachable, but also the consummate professional. She adhered to the budget and kept me informed of progress during each phase of the transformation. I would have no hesitation
+                    in recommending Conbu Interior Design and thank Angela for all her help and attention to detail throughout this project.” <strong>2015 N McC, Ashbourne, Co Meath</strong></p>
             </div>
-            <div class="well"><i class="fa fa-quote-left fa-2x fa-pull-left fa-border"></i>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
-                nostrud exerci tation ullamcorper suscipit lobort
+            <div class="well"><i class="fa fa-quote-left fa-2x fa-pull-left fa-border"></i>We were looking for someone to turn our front room into an acoustically designed music room. Angela responded with enthusiasm and was willing to work outside her comfort zone. She
+                diligently sourced the right people and materials and help realise our vision. Throughout the process she was efficient, creative and enthusiastic. We would highly recommend her.” <strong>2015 Mr & Mrs H, Glenageary, Co Dublin</strong>
+            </div>
+            <div class="well"><i class="fa fa-quote-left fa-2x fa-pull-left fa-border"></i>I would highly recommend Angela, she provided a very professional service to an extremely high standard. She is passionate about her job and it shines through from providing valuable
+                and insightful advice, having contacts with wide range of suppliers (also proved useful to get further discounts) but also delivering a service that exceeded my expectations.” <strong>2014 F Lane, Stillorgan, Co Dublin</strong>
+            </div>
+            <div class="well"><i class="fa fa-quote-left fa-2x fa-pull-left fa-border"></i>From start to finish I found Angela at Conbu Interior Design a complete Joy to work with. She listened to all my ideas and came up with some fantastic design ideas for me. The rooms
+                look fabulous and I am so pleased with the results. I would have no hesitation in recommending Conbu Interior Design.” <strong>2013 D Cregg, Swords</strong>
+            </div>
+            <div class="well"><i class="fa fa-quote-left fa-2x fa-pull-left fa-border"></i>I have no hesitation in recommending Angela’s services. Angela executed the design and colour scheme and coordinated and managed the project. Angela always found a solution taking
+                my preferences and wishes into consideration. My home was beautifully transformed very quickly with no disruption.” <strong>2014 Gerardine K, Dunshaughlin, Co Meath</strong>
+            </div>
+            <div class="well"><i class="fa fa-quote-left fa-2x fa-pull-left fa-border"></i>
+                <p>I thank you very sincerely for acting as project manager in the refurbishing and redecorating of my home. My late wife had wonderful talent in that regard and she would have been extremely pleased with the result of your input. Apart from
+                    your talent as an interior decorator, I greatly appreciate your management skills in sourcing all the relevant parties/subcontractors and then ensuring that they all delivered on schedule.</p>
+                <p>An important aspect is that for me there were no unexpected unwelcome surprises. Thank you also for this! I wish you well and hope that many others also may be the beneficiaries, as I was, of your skills. I look forward to your next assignment
+                    for me!” <strong>2011 D O’Maolchoille, Churchtown, Dublin</strong></p>
+            </div>
+            <div class="well"><i class="fa fa-quote-left fa-2x fa-pull-left fa-border"></i>
+                <p>Angela immediately was at one with the brief and used her innate creativity and professional eye to create a space that highlights both the character of the building and the brand of our organisation. She is incredibly easy to work with
+                    and is highly committed. She effectively managed every aspect of this tough 6 month refurbishment from beginning to end.</p>
+                <p>I would have no hesitation in recommending Angela to anyone looking for a superb interior designer and project manager.” <strong>2011 A Gilliland, INTO Parnell Square</strong>
             </div>
         </div>
         <!-- Main Content -->
