--- a/services.html
+++ b/services.html
@@ -31,7 +31,7 @@
                 </a>
             </div>
             <div class="navbar-collapse collapse " id="navbar">
-                <ul class="social-icons-nav hidden-xs hidden-sm">
+                <ul class="social-icons-nav hidden-xs hidden-sm hidden-md">
                     <a href="https://www.linkedin.com/in/angelatconnolly">
                         <li class="fa fa-linkedin"></li>
                     </a>
@@ -82,11 +82,8 @@
                 <div class="col-sm-12 ">
                     <h1 class="portfolio-h1">Services</h1>
                     <hr class="block-divider-portfolio">
-                    <div class="services-p-top">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis
-                        nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis.
-                        </p>
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis
-                            nisl ut aliquip ex ea commodo consequat.Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis.
+                    <div class="services-p-top">Over the last 10 years, Conbu Interior Design has made its name within the industry for interiors that are functional, elegant, dynamic and designed for living. Our interior design practice is friendly, approachable and committed to
+                        achieving the best design solution possible for any project whether a private residence, show house, hotel or retail outlet.
                         </p>
                     </div>
                 </div>
@@ -98,10 +95,10 @@
     <section>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-sm-8">
+                <div class="col-xs-8 col-lg-4">
                     <img class="services-images" src="images/services.jpg"></img>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-xs-4">
                     <h2 class="services-h2">Interior Design</h2>
                     <hr class="block-divider-portfolio">
                     <div class="services-p">Lorem ipsum dolor sit amet, "I haven't been sober for months" nibh euismod tincidunt ut laoreet dolore magna aliquam.
@@ -111,7 +108,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-xs-4">
                     <h2 class="services-h2">Design Collections</h2>
                     <hr class="block-divider-portfolio">
                     <div class="services-p">Lorem ipsum dolor sit amet, "I haven't been sober for months" nibh euismod tincidunt ut laoreet dolore magna aliquam.
@@ -120,7 +117,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-sm-8">
+                <div class="col-xs-8">
                     <img class="services-images" src="images/services.jpg"></img>
                 </div>
             </div>
