--- a/bedrooms.html
+++ b/bedrooms.html
@@ -19,9 +19,9 @@
         <div class="container-fluid ">
             <div class="navbar-header ">
                 <button type="button " class="navbar-toggle" data-toggle="collapse " data-target="#navbar " aria-expanded="false ">
-                     <span class="icon-bar "></span>
-                     <span class="icon-bar "></span>
-                     <span class="icon-bar "></span>
+                     <span class="icon-bar"></span>
+                     <span class="icon-bar"></span>
+                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-logo">
                     <a href="index.html" class="navbar-logo">
@@ -30,7 +30,7 @@
                 </a>
             </div>
             <div class="navbar-collapse collapse" id="navbar">
-                <ul class="social-icons-nav hidden-xs hidden-sm">
+                <ul class="social-icons-nav hidden-xs hidden-sm hidden-md">
                     <a href="https://www.linkedin.com/in/angelatconnolly">
                         <li class="fa fa-linkedin"></li>
                     </a>
