--- a/blog.html
+++ b/blog.html
@@ -30,7 +30,7 @@
                 </a>
             </div>
             <div class="navbar-collapse collapse " id="navbar">
-                <ul class="social-icons-nav hidden-xs hidden-sm">
+                <ul class="social-icons-nav hidden-xs hidden-sm hidden-md">
                     <a href="https://www.linkedin.com/in/angelatconnolly">
                         <li class="fa fa-linkedin"></li>
                     </a>
@@ -61,7 +61,7 @@
     <section>
         <div class="container">
             <div class="row">
-                <div class="col-sm-12">
+                <div class="col-xs-12">
                     <h1 class="portfolio-h1">Blog</h1>
                     <hr class="block-divider-portfolio">
                 </div>
@@ -69,7 +69,7 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-sm-12">
+                <div class="col-xs-12">
                     <!-- Form code from W3 schools -->
                     <div class="blog-p">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. consectetuer adipiscing elit. adipiscing elit. consectetuer adipiscing elit. adipiscing elit. consectetuer adipiscing
                         consectetuer adipiscing elit. adipiscing elit. consectetuer adipiscing elit. adipiscing elit. consectetuer adipiscing elit.
@@ -92,43 +92,43 @@
     </section>
 
     <section>
-        <div class="container-fluid blog">
+        <div class="container-fluid">
             <div class="row">
-                <div class="col-sm-4 blog">
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                     <div class="blog-image">
-                        <img src="https://placehold.it/250x180?text=IMAGE " class="imgage-in-blog " style="width:100% " alt="Image">
+                        <img src="https://placehold.it/250x180?text=IMAGE" style="width:100% " alt="Image">
                         </a>
                     </div>
                 </div>
-                <div class="col-sm-4 blog">
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                     <div class="blog-image">
-                        <img src="https://placehold.it/250x180?text=IMAGE " class="imgage-in-blog " style="width:100% " alt="Image">
+                        <img src="https://placehold.it/250x180?text=IMAGE" style="width:100% " alt="Image">
                         </a>
                     </div>
                 </div>
-                <div class="col-sm-4 blog">
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                     <div class="blog-image">
-                        <img src="https://placehold.it/250x180?text=IMAGE " class="imgage-in-blog " style="width:100% " alt="Image">
+                        <img src="https://placehold.it/250x180?text=IMAGE" style="width:100% " alt="Image">
                         </a>
                     </div>
                 </div>
             </div>
             <div class="row ">
-                <div class="col-sm-4 blog">
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                     <div class="blog-image">
-                        <img src="https://placehold.it/250x180?text=IMAGE " class="imgage-in-blog " style="width:100% " alt="Image">
+                        <img src="https://placehold.it/250x180?text=IMAGE" style="width:100% " alt="Image">
                         </a>
                     </div>
                 </div>
-                <div class="col-sm-4 blog">
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                     <div class="blog-image">
-                        <img src="https://placehold.it/250x180?text=IMAGE " class="imgage-in-blog " style="width:100% " alt="Image">
+                        <img src="https://placehold.it/250x180?text=IMAGE" style="width:100% " alt="Image">
                         </a>
                     </div>
                 </div>
-                <div class="col-sm-4 blog">
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                     <div class="blog-image">
-                        <img src="https://placehold.it/250x180?text=IMAGE " class="imgage-in-blog " style="width:100% " alt="Image">
+                        <img src="https://placehold.it/250x180?text=IMAGE" style="width:100% " alt="Image">
                         </a>
                     </div>
                 </div>
