--- a/contact.html
+++ b/contact.html
@@ -19,9 +19,9 @@
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse " data-target="#navbar " aria-expanded="false ">
-                     <span class="icon-bar "></span>
-                     <span class="icon-bar "></span>
-                     <span class="icon-bar "></span>
+                     <span class="icon-bar"></span>
+                     <span class="icon-bar"></span>
+                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-logo">
                     <a href="index.html" class="navbar-logo">
@@ -29,8 +29,8 @@
                     </a>
                 </a>
             </div>
-            <div class="navbar-collapse collapse " id="navbar">
-                <ul class="social-icons-nav hidden-xs hidden-sm">
+            <div class="navbar-collapse collapse" id="navbar">
+                <ul class="social-icons-nav hidden-xs hidden-sm hidden-md">
                     <a href="https://www.linkedin.com/in/angelatconnolly">
                         <li class="fa fa-linkedin"></li>
                     </a>
@@ -62,13 +62,13 @@
     <section>
         <div class="container">
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
                     <div class="left-column-contact">
                         <ul class="list-group">
                             <li class="contact-item"><i class="fa fa-phone"></i><span>Telephone</span>
                             </li>
-                            <p>01 123654</p>
-                            <p>087 123654</p>
+                            <p>01 663 6804</p>
+                            <p>086 826 9995</p>
                             <hr class="block-divider-contact">
                             <li class="contact-item"><i class="fa fa-envelope"></i><span>Email</span>
                             </li>
@@ -79,7 +79,7 @@
                             <li class="contact-item "><i class="fa fa-twitter "></i><span>Twitter</span>
                             </li>
                             <p>
-                                <a href="https://twitter.com/ConbuInteriors">www.twitter.com/ConbuInteriors</a>
+                                <a href="https://twitter.com/ConbuInteriors">@conbuinteriors</a>
                             </p>
                             <hr class="block-divider-contact ">
                             <li class="contact-item "><i class="fa fa-pinterest "></i><span>Pinterest</span>
@@ -94,41 +94,40 @@
                                 <a href="https://www.linkedin.com/in/angelatconnolly">www.linkedin.com/in/angelatconnolly</a>
                             </p>
                         </ul>
-
                     </div>
                 </div>
-                <div class="col-sm-4 ">
-                    <h4 class="contact-h4 ">Ask a Question or Book a Consultation</h4>
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                    <h4 class="contact-h4">Ask a Question or Book a Consultation</h4>
                     <form action="/action_page.php ">
-                        <div class="form-group ">
+                        <div class="form-group">
                             <label for="name ">Name: *</label>
                             <input type="text " class="form-control " id="name " placeholder="Name " name="name ">
                         </div>
-                        <div class="form-group ">
+                        <div class="form-group">
                             <label for="email ">Email: *</label>
                             <input type="email " class="form-control " id="email " placeholder="Email " name="email ">
                         </div>
-                        <div class="form-group ">
+                        <div class="form-group">
                             <label for="subject ">Subject: *</label>
                             <input type="text " class="form-control " id="subject " placeholder="Subject " name="subject ">
                         </div>
-                        <div class="form-group ">
+                        <div class="form-group">
                             <label for="subject ">Message: *</label>
                             <textarea class="form-control " rows="5 " id="comment "></textarea>
                         </div>
                         <button type="submit " class="btn btn-default ">Submit</button>
                     </form>
                 </div>
-                <div class="col-sm-4 ">
+                <div class="col-xs-12 col-sm-6 col-md-3 col-lg-4 col-xl-4">
                     <div class="location-heading ">
                         <i class="fa fa-map-marker " style="font-size:28px;color:red "></i><span class="location ">Location</span>
                         <br><br>
                     </div>
-                    <div class="contact-p ">
+                    <div class="contact-p">
                         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna nisl ut aliquip ex ea commodo consequat.</p>
                         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nisl ut aliquip ex ea commodo consequat.</p>
                     </div>
-                    <div class="location-image ">
+                    <div class="location-image">
                         <img src="images/googleac1.jpg " class="imgage-in-mystory-page " alt="Image ">
                     </div>
                 </div>
