--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
                 </a>
             </div>
             <div class="navbar-collapse collapse " id="navbar">
-                <ul class="social-icons-nav hidden-xs hidden-sm">
+                <ul class="social-icons-nav hidden-xs hidden-sm hidden-md">
                     <a href="https://www.linkedin.com/in/angelatconnolly">
                         <li class="fa fa-linkedin"></li>
                     </a>
@@ -63,7 +63,7 @@
 
         <div class="container-fluid">
             <div class="row">
-                <div class="col-xs-12 ">
+                <div class="col-xs-12">
                     <h1 class="portfolio-h1">Portfolio</h1>
                     <hr class="block-divider-portfolio">
                     <div class="portfolio-p">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis
@@ -75,10 +75,10 @@
         </div>
         <div class="container-fluid portfolio-images">
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                     <div class="portfolio-image">
                         <a href="kitchens.html">
-                        <img src="https://placehold.it/150x80?text=IMAGE" class="imgage-in-portfolio-page" style="width:70%" alt="Image" a href="kitchens.html" >
+                        <img src="https://placehold.it/150x80?text=IMAGE" class="imgage-in-portfolio-page" style="width:100%" alt="Image" a href="kitchens.html" >
                         </a>
                         <div class="middle">
                             <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="kitchens.html">Explore completed Kitchen Projects</a>
@@ -87,10 +87,10 @@
                     </div>
                     <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="kitchens.html">Kitchens</a></h4>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                     <div class="portfolio-image">
                         <a href="bedrooms.html">
-                        <img src="https://placehold.it/150x80?text=IMAGE" class="imgage-in-portfolio-page" style="width:70%" alt="Image"> 
+                        <img src="https://placehold.it/150x80?text=IMAGE" class="imgage-in-portfolio-page" style="width:100%" alt="Image"> 
                         </a>
                         <div class="middle">
                             <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="bedrooms.html">Explore completed Bedroom Projects</a>
@@ -99,10 +99,10 @@
                     </div>
                     <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="bedrooms.html">Bedrooms</a></h4>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                     <div class="portfolio-image">
                         <a href="bathrooms.html">
-                        <img src="https://placehold.it/150x80?text=IMAGE" class="imgage-in-portfolio-page" style="width:70%" alt="Image">
+                        <img src="https://placehold.it/150x80?text=IMAGE" class="imgage-in-portfolio-page" style="width:100%" alt="Image">
                          </a>
                         <div class="middle">
                             <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="bathrooms.html">Explore completed Bathroom Project</a>
@@ -113,10 +113,10 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                     <div class="portfolio-image">
                         <a href="livingrooms.html">
-                        <img src="https://placehold.it/150x80?text=IMAGE" class="imgage-in-portfolio-page" style="width:70%" alt="Image">
+                        <img src="https://placehold.it/150x80?text=IMAGE" class="imgage-in-portfolio-page" style="width:100%" alt="Image">
                          </a>
                         <div class="middle">
                             <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="livingrooms.html">Explore completed Living Room Project</a>
@@ -125,10 +125,10 @@
                     </div>
                     <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="livingrooms.html">Living Rooms</a></h4>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                     <div class="portfolio-image">
                         <a href="commercial.html">
-                        <img src="https://placehold.it/150x80?text=IMAGE" class="imgage-in-portfolio-page" style="width:70%" alt="Image">
+                        <img src="https://placehold.it/150x80?text=IMAGE" class="imgage-in-portfolio-page" style="width:100%" alt="Image">
                          </a>
                         <div class="middle">
                             <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="commercial.html">Explore Commercial Project</a>
@@ -137,10 +137,10 @@
                     </div>
                     <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="commercial.html">Commercial</a></h4>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                     <div class="portfolio-image">
                         <a href="custom.html">
-                        <img src="https://placehold.it/150x80?text=IMAGE" class="imgage-in-portfolio-page" style="width:70%" alt="Image">
+                        <img src="https://placehold.it/150x80?text=IMAGE" class="imgage-in-portfolio-page" style="width:100%" alt="Image">
                          </a>
                         <div class="middle">
                             <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="custom.html">Explore Custom Furniture</a>
