--- a/blog.html
+++ b/blog.html
@@ -94,19 +94,19 @@
     <section>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+                <div class="col-xs-12 col-lg-4">
                     <div class="blog-image">
                         <img src="https://placehold.it/250x180?text=IMAGE" style="width:100% " alt="Image">
                         </a>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+                <div class="col-xs-12 col-lg-4">
                     <div class="blog-image">
                         <img src="https://placehold.it/250x180?text=IMAGE" style="width:100% " alt="Image">
                         </a>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+                <div class="col-xs-12 col-lg-4">
                     <div class="blog-image">
                         <img src="https://placehold.it/250x180?text=IMAGE" style="width:100% " alt="Image">
                         </a>
@@ -114,19 +114,19 @@
                 </div>
             </div>
             <div class="row ">
-                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+                <div class="col-xs-12 col-lg-4">
                     <div class="blog-image">
                         <img src="https://placehold.it/250x180?text=IMAGE" style="width:100% " alt="Image">
                         </a>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+                <div class="col-xs-12 col-lg-4">
                     <div class="blog-image">
                         <img src="https://placehold.it/250x180?text=IMAGE" style="width:100% " alt="Image">
                         </a>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+                <div class="col-xs-12 col-lg-4">
                     <div class="blog-image">
                         <img src="https://placehold.it/250x180?text=IMAGE" style="width:100% " alt="Image">
                         </a>
