--- a/portfolio.html
+++ b/portfolio.html
@@ -75,7 +75,7 @@
         </div>
         <div class="container-fluid portfolio-images">
             <div class="row">
-                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+                <div class="col-xs-12 col-lg-4">
                     <div class="portfolio-image">
                         <a href="kitchens.html">
                         <img src="https://placehold.it/150x80?text=IMAGE" class="imgage-in-portfolio-page" style="width:100%" alt="Image" a href="kitchens.html" >
@@ -87,7 +87,7 @@
                     </div>
                     <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="kitchens.html">Kitchens</a></h4>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+                <div class="col-xs-12 col-lg-4">
                     <div class="portfolio-image">
                         <a href="bedrooms.html">
                         <img src="https://placehold.it/150x80?text=IMAGE" class="imgage-in-portfolio-page" style="width:100%" alt="Image"> 
@@ -99,7 +99,7 @@
                     </div>
                     <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="bedrooms.html">Bedrooms</a></h4>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+                <div class="col-xs-12 col-lg-4">
                     <div class="portfolio-image">
                         <a href="bathrooms.html">
                         <img src="https://placehold.it/150x80?text=IMAGE" class="imgage-in-portfolio-page" style="width:100%" alt="Image">
@@ -113,7 +113,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+                <div class="col-xs-12 col-lg-4">
                     <div class="portfolio-image">
                         <a href="livingrooms.html">
                         <img src="https://placehold.it/150x80?text=IMAGE" class="imgage-in-portfolio-page" style="width:100%" alt="Image">
@@ -125,7 +125,7 @@
                     </div>
                     <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="livingrooms.html">Living Rooms</a></h4>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+                <div class="col-xs-12 col-lg-4">
                     <div class="portfolio-image">
                         <a href="commercial.html">
                         <img src="https://placehold.it/150x80?text=IMAGE" class="imgage-in-portfolio-page" style="width:100%" alt="Image">
@@ -137,7 +137,7 @@
                     </div>
                     <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="commercial.html">Commercial</a></h4>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+                <div class="col-xs-12 col-lg-4">
                     <div class="portfolio-image">
                         <a href="custom.html">
                         <img src="https://placehold.it/150x80?text=IMAGE" class="imgage-in-portfolio-page" style="width:100%" alt="Image">
