--- a/services.html
+++ b/services.html
@@ -46,46 +46,27 @@
                     </a>
                     <li class="fa fa-google "><a href="#h "></a></li>
                 </ul>
-                <!-- Looking at code lab for the dropdown menu item -->
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav navbar-left">
-                        <li><a href="index.html">Welcome</a></li>
-                        <li><a href="mystory.html">My Story</a></li>
-                        <li class="dropdown">
-                            <a href="portfolio.html" data-toggle="dropdown" class="dropdown-toggle">Portfolio<b class="caret"></b></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Kitchens</a></li>
-                                <li class="divider"></li>
-                                <li><a href="#">Bedrooms</a></li>
-                                <li class="divider"></li>
-                                <li><a href="#">Bathrooms</a></li>
-                                <li class="divider"></li>
-                                <li><a href="#">Living Rooms</a></li>
-                                <li class="divider"></li>
-                                <li><a href="#">Commercial</a></li>
-                                <li class="divider"></li>
-                                <li><a href="#">Custom Furniture</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="blog.html">Blog</a></li>
-                        <li><a href="services.html">Services</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </div>
+                <ul class="nav navbar-nav navbar-left">
+                    <li><a href="index.html">Welcome</a></li>
+                    <li><a href="mystory.html">My Story</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
             </div>
+        </div>
     </nav>
     <!-- NAV -->
 
     <section>
-        <div class="container-fluid">
+        <div class="container">
             <div class="row">
-                <div class="col-sm-12 ">
-                    <h1 class="portfolio-h1">Services</h1>
-                    <hr class="block-divider-portfolio">
-                    <div class="services-p-top">Over the last 10 years, Conbu Interior Design has made its name within the industry for interiors that are functional, elegant, dynamic and designed for living. Our interior design practice is friendly, approachable and committed to
-                        achieving the best design solution possible for any project whether a private residence, show house, hotel or retail outlet.
-                        </p>
-                    </div>
+                <h1 class="portfolio-h1">Services</h1>
+                <hr class="block-divider-portfolio">
+                <div class="services-p-top">Over the last 10 years, Conbu Interior Design has made its name within the industry for interiors that are functional, elegant, dynamic and designed for living. Our interior design practice is friendly, approachable and committed to achieving
+                    the best design solution possible for any project whether a private residence, show house, hotel or retail outlet.
+                    </p>
                 </div>
             </div>
         </div>
@@ -95,10 +76,10 @@
     <section>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-xs-8 col-lg-4">
+                <div class="col-xs-12 col-lg-8">
                     <img class="services-images" src="images/services.jpg"></img>
                 </div>
-                <div class="col-xs-4">
+                <div class="col-xs-12 col-lg-4">
                     <h2 class="services-h2">Interior Design</h2>
                     <hr class="block-divider-portfolio">
                     <div class="services-p">Lorem ipsum dolor sit amet, "I haven't been sober for months" nibh euismod tincidunt ut laoreet dolore magna aliquam.
@@ -108,7 +89,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-4">
+                <div class="col-xs-12 col-lg-4">
                     <h2 class="services-h2">Design Collections</h2>
                     <hr class="block-divider-portfolio">
                     <div class="services-p">Lorem ipsum dolor sit amet, "I haven't been sober for months" nibh euismod tincidunt ut laoreet dolore magna aliquam.
@@ -117,7 +98,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-xs-8">
+                <div class="col-xs-12 col-lg-8">
                     <img class="services-images" src="images/services.jpg"></img>
                 </div>
             </div>
