added new images to all pages

--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner">
                     <div class="item active">
-                        <img src="https://placehold.it/1900x800?text=IMAGE " alt="Image">
+                        <img src="/images/Home Page Slider Images/1_Home_Page_Slider.jpeg" alt="Image">
                     </div>
 
                     <div class="item">
-                        <img src="https://placehold.it/1900x800?text=IMAGE " alt="Image">
+                        <img src="/images/Home Page Slider Images/2_Home_Page_Slider2.jpg" alt="Image">
                     </div>
 
                     <div class="item">
-                        <img src="https://placehold.it/1900x800?text=IMAGE " alt="Image">
+                        <img src="//images/Home Page Slider Images/3_Home_Page_Slider3.jpg" alt="Image">
                     </div>
                 </div>
 
